--- a/index.html
+++ b/index.html
@@ -97,20 +97,27 @@
             <div class="col-12 col-md-3" style="position: relative;">
                 <div>
                     <img src="https://random.imagecdn.app/300/150" alt="">
-                    <svg style="position: absolute;right: 9%;bottom: 47%;color: red;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-collection-play-fill" viewBox="0 0 16 16">
+                    <svg style="position: absolute;right: 9%;bottom: 58%;color: orangered;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-collection-play-fill" viewBox="0 0 16 16">
                         <path d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm6.258-6.437a.5.5 0 0 1 .507.013l4 2.5a.5.5 0 0 1 0 .848l-4 2.5A.5.5 0 0 1 6 12V7a.5.5 0 0 1 .258-.437z"/>
                       </svg>
                 </div>
                 <ul style="padding-left: 0 !important;margin-top: 10px;">
                     <li>
-                        <svg style="color: red;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-collection-play-fill" viewBox="0 0 16 16">
+                        <svg style="color: orangered;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-collection-play-fill" viewBox="0 0 16 16">
                             <path d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm6.258-6.437a.5.5 0 0 1 .507.013l4 2.5a.5.5 0 0 1 0 .848l-4 2.5A.5.5 0 0 1 6 12V7a.5.5 0 0 1 .258-.437z"/>
                           </svg>
                         <span style="font-weight: bold;"><small class="text-muted">12 minutes ago</small></span>
                         <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur.</p>
                     </li>
                     <li>
-                        <svg style="color: red;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-collection-play-fill" viewBox="0 0 16 16">
+                        <svg style="color: orangered;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-collection-play-fill" viewBox="0 0 16 16">
+                            <path d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm6.258-6.437a.5.5 0 0 1 .507.013l4 2.5a.5.5 0 0 1 0 .848l-4 2.5A.5.5 0 0 1 6 12V7a.5.5 0 0 1 .258-.437z"/>
+                          </svg>
+                        <span style="font-weight: bold;"><small class="text-muted">12 minutes ago</small></span>
+                        <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur.</p>
+                    </li>
+                    <li>
+                        <svg style="color: orangered;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-collection-play-fill" viewBox="0 0 16 16">
                             <path d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm6.258-6.437a.5.5 0 0 1 .507.013l4 2.5a.5.5 0 0 1 0 .848l-4 2.5A.5.5 0 0 1 6 12V7a.5.5 0 0 1 .258-.437z"/>
                           </svg>
                         <span style="font-weight: bold;"><small class="text-muted">12 minutes ago</small></span>
@@ -149,15 +156,71 @@
             <div class="col-12 col-md-7">
                 <div class="row">
                     <div class="col-12 col-md-8">
-                        <img class="myImage" src="https://random.imagecdn.app/460/200" alt="">
+                        <img class="myImage" src="https://random.imagecdn.app/300/400" alt="">
                     </div>
                     <div class="col-12 col-md-4">
                         <img src="https://random.imagecdn.app/232/200" alt="">
+                        <div class="mt-3" style="display: flex; flex-direction: row; justify-content: space-between;">
+                          <div>
+                            <img src="https://random.imagecdn.app/100/50" alt="">
+                            <p class="card-title">Image Title</p>
+                          </div>
+                          <div>
+                            <img src="https://random.imagecdn.app/100/50" alt="">
+                            <p class="card-title">Image Title</p>
+                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="row">
+              <div class="col-4">
+                <div class="d-flex">
+                  <img src="https://random.imagecdn.app/120/100" alt="">
+                  <div class="ml-3" style="margin-left: 25px;">
+                    <h4>This is title</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="d-flex">
+                  <img src="https://random.imagecdn.app/120/100" alt="">
+                  <div class="ml-3" style="margin-left: 25px;">
+                    <h4>This is title</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="d-flex">
+                  <img src="https://random.imagecdn.app/120/100" alt="">
+                  <div class="ml-3" style="margin-left: 25px;">
+                    <h4>This is title</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+                  </div>
+                </div>
+              </div>
+            </div>
         </div>
     </div>
+    <span ><h4 style="float:right;padding-right: 20px; margin-top: 5px; color: #fff;">Play  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
+      <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
+    </svg></h4></span>
+    <div class="container-fluid mx-0" id="divide_sec">
+      <h4>Hi</h4>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-3">1
+          
+        </div>
+        <div class="col-3">2</div>
+        <div class="col-3">3</div>
+        <div class="col-3">4</div>
+      </div>
+    </div>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
