--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <div class="d-flex">
                   <img src="https://random.imagecdn.app/120/100" alt="">
                   <div class="ml-3" style="margin-left: 25px;">
-                    <h4>This is title</h4>
+                    <h4>This is Title</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
                   </div>
                 </div>
@@ -187,7 +187,7 @@
                 <div class="d-flex">
                   <img src="https://random.imagecdn.app/120/100" alt="">
                   <div class="ml-3" style="margin-left: 25px;">
-                    <h4>This is title</h4>
+                    <h4>This is Title</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
                   </div>
                 </div>
@@ -196,7 +196,7 @@
                 <div class="d-flex">
                   <img src="https://random.imagecdn.app/120/100" alt="">
                   <div class="ml-3" style="margin-left: 25px;">
-                    <h4>This is title</h4>
+                    <h4>This is Title</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
                   </div>
                 </div>
@@ -211,13 +211,89 @@
       <h4>Hi</h4>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-3">1
-          
+      <div class="row mt-3">
+        <div class="col-3">
+          <ul class="d-flex" style="padding-left: 0;">
+            <li><button class="button" style="background-color: #4CAF50;">Link </button></li>
+            <li><button class="button" style="background-color: #282a28;">Link </button></li>
+            <li><button class="button" style="background-color: #ea5b13;">Link </button></li>
+          </ul>
+          <div class="contianer-fluid bg-grey">
+            <div style="margin-bottom: 4px;border-bottom: 1px soild black !important;">
+              <div class="d-flex">
+                <img src="https://random.imagecdn.app/100/60" alt="">
+                <div class="ml-3" style="margin-left: 25px;">
+                  <h4>This is Title</h4>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+                </div>
+              </div>
+            </div>
+            <div style="margin-bottom: 4px;border-bottom: 1px soild black !important;">
+              <div class="d-flex">
+                <img src="https://random.imagecdn.app/100/60" alt="">
+                <div class="ml-3" style="margin-left: 25px;">
+                  <h4>This is Title</h4>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+                </div>
+                </div>
+              </div>
+              <div style="margin-bottom: 4px;border-bottom: 1px soild black !important;">
+                <div class="d-flex">
+                  <img src="https://random.imagecdn.app/100/60" alt="">
+                  <div class="ml-3" style="margin-left: 25px;">
+                    <h4>This is Title</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+                  </div>
+                </div>
+              </div>
+            <button class="button" style="width: 100%;background-color: orangered;" width="100%">Read more</button>
+          </div>
         </div>
-        <div class="col-3">2</div>
-        <div class="col-3">3</div>
-        <div class="col-3">4</div>
+        <div class="col-3">
+          <img src="https://random.imagecdn.app/300/350" alt="">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-alarm" viewBox="0 0 16 16">
+            <path d="M8.5 5.5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5z"/>
+            <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07a7.001 7.001 0 0 0-3.273 12.474l-.602.602a.5.5 0 0 0 .707.708l.746-.746A6.97 6.97 0 0 0 8 16a6.97 6.97 0 0 0 3.422-.892l.746.746a.5.5 0 0 0 .707-.708l-.601-.602A7.001 7.001 0 0 0 9 2.07V1h.5a.5.5 0 0 0 0-1h-3zm1.038 3.018a6.093 6.093 0 0 1 .924 0 6 6 0 1 1-.924 0zM0 3.5c0 .753.333 1.429.86 1.887A8.035 8.035 0 0 1 4.387 1.86 2.5 2.5 0 0 0 0 3.5zM13.5 1c-.753 0-1.429.333-1.887.86a8.035 8.035 0 0 1 3.527 3.527A2.5 2.5 0 0 0 13.5 1z"/>
+          </svg>
+          <span style="font-weight: bold;"><small class="text-muted">12 minutes ago</small></span>
+          <p style="font-weight:bold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem libero, quos et ratione dolore aliquid vero officia dicta adipisci ad.</p>
+        </div>
+        <div class="col-3">
+          <div class="d-flex">
+            <img src="https://random.imagecdn.app/120/80" alt="">
+            <div class="ml-3" style="margin-left: 25px;">
+              <h4>This is Title</h4>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+            </div>
+          </div>
+          <div class="d-flex">
+            <img src="https://random.imagecdn.app/120/80" alt="">
+            <div class="ml-3" style="margin-left: 25px;">
+              <h4>This is Title</h4>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+            </div>
+          </div>
+          <div class="d-flex">
+            <img src="https://random.imagecdn.app/120/80" alt="">
+            <div class="ml-3" style="margin-left: 25px;">
+              <h4>This is Title</h4>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+            </div>
+          </div>
+          <div class="d-flex">
+            <img src="https://random.imagecdn.app/120/80" alt="">
+            <div class="ml-3" style="margin-left: 25px;">
+              <h4>This is Title</h4>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <img src="https://random.imagecdn.app/300/200" alt="">
+          <p style="font-weight:bold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem libero, quos et ratione dolore aliquid vero officia dicta adipisci ad.</p>
+          <img style="margin-top: 50px;" src="https://random.imagecdn.app/260/140" alt="">
+          <p style="font-weight:normal;">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
       </div>
     </div>
   </div>
