--- a/index.html
+++ b/index.html
@@ -59,27 +59,45 @@
             </div>
         </div>
     </div>
-    <header class="container">
+    <header class="container d-block d-md-none">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#">This is LOGO</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#">Link 1</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Link 2</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Link 3</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link 4</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link 5</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link 6</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link 7</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link 8</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link 9</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown link
+                      Link 10
                     </a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="#">Action</a></li>
@@ -92,6 +110,33 @@
             </div>
           </nav>
     </header>
+    <div class="container my-3 px-0 d-none d-md-block">
+      <ul id="custom_nav" style="margin: 0;">
+        <li>Link 1</li>
+        <li>Link 2</li>
+        <li>Link 3</li>
+        <li>Link 4</li>
+        <li>Link 5</li>
+        <li>Link 6</li>
+        <li>Link 7</li>
+        <li>Link 8</li>
+        <li>Link 9</li>
+        <li>
+          <div class="btn-group">
+            <small class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+              Link 10
+            </small>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Separated link</a></li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </div>
     <div class="container">
         <div class="row my-2">
             <div class="col-12 col-md-3" style="position: relative;">
@@ -189,7 +234,7 @@
                   <div class="ml-3" style="margin-left: 25px;">
                     <h4>This is Title</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
-                  </div>
+                  </div>  
                 </div>
               </div>
               <div class="col-4">
@@ -250,7 +295,7 @@
           </div>
         </div>
         <div class="col-3">
-          <img src="https://random.imagecdn.app/300/350" alt="">
+          <img src="https://random.imagecdn.app/300/350" alt="" style="margin-bottom: 15px;">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-alarm" viewBox="0 0 16 16">
             <path d="M8.5 5.5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5z"/>
             <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07a7.001 7.001 0 0 0-3.273 12.474l-.602.602a.5.5 0 0 0 .707.708l.746-.746A6.97 6.97 0 0 0 8 16a6.97 6.97 0 0 0 3.422-.892l.746.746a.5.5 0 0 0 .707-.708l-.601-.602A7.001 7.001 0 0 0 9 2.07V1h.5a.5.5 0 0 0 0-1h-3zm1.038 3.018a6.093 6.093 0 0 1 .924 0 6 6 0 1 1-.924 0zM0 3.5c0 .753.333 1.429.86 1.887A8.035 8.035 0 0 1 4.387 1.86 2.5 2.5 0 0 0 0 3.5zM13.5 1c-.753 0-1.429.333-1.887.86a8.035 8.035 0 0 1 3.527 3.527A2.5 2.5 0 0 0 13.5 1z"/>
@@ -259,32 +304,40 @@
           <p style="font-weight:bold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem libero, quos et ratione dolore aliquid vero officia dicta adipisci ad.</p>
         </div>
         <div class="col-3">
-          <div class="d-flex">
-            <img src="https://random.imagecdn.app/120/80" alt="">
-            <div class="ml-3" style="margin-left: 25px;">
-              <h4>This is Title</h4>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+          <div style="margin-bottom: 6px;border-bottom: 1px soild black !important;">
+            <div class="d-flex">
+              <img src="https://random.imagecdn.app/120/80" alt="">
+              <div class="ml-3" style="margin-left: 25px;">
+                <h4>This is Title</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+              </div>
             </div>
           </div>
-          <div class="d-flex">
-            <img src="https://random.imagecdn.app/120/80" alt="">
-            <div class="ml-3" style="margin-left: 25px;">
-              <h4>This is Title</h4>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+          <div style="margin-bottom: 6px;border-bottom: 1px soild black !important;">
+            <div class="d-flex">
+              <img src="https://random.imagecdn.app/120/80" alt="">
+              <div class="ml-3" style="margin-left: 25px;">
+                <h4>This is Title</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+              </div>
             </div>
           </div>
-          <div class="d-flex">
-            <img src="https://random.imagecdn.app/120/80" alt="">
-            <div class="ml-3" style="margin-left: 25px;">
-              <h4>This is Title</h4>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+          <div style="margin-bottom: 6px;border-bottom: 1px soild black !important;">
+            <div class="d-flex">
+              <img src="https://random.imagecdn.app/120/80" alt="">
+              <div class="ml-3" style="margin-left: 25px;">
+                <h4>This is Title</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+              </div>
             </div>
           </div>
-          <div class="d-flex">
-            <img src="https://random.imagecdn.app/120/80" alt="">
-            <div class="ml-3" style="margin-left: 25px;">
-              <h4>This is Title</h4>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+          <div style="margin-bottom: 6px;border-bottom: 1px soild black !important;">
+            <div class="d-flex">
+              <img src="https://random.imagecdn.app/120/80" alt="">
+              <div class="ml-3" style="margin-left: 25px;">
+                <h4>This is Title</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, doloremque!</p>
+              </div>
             </div>
           </div>
         </div>
