--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             </div>
         </div>
         <div class="row my-2">
-            <div class="col-6">
+            <div class="col-12 col-md-6">
                 <img src="https://random.imagecdn.app/250/50" alt="">
             </div>
-            <div class="col-6">
+            <div class="col-12 col-md-6">
                 <img src="https://random.imagecdn.app/635/50" alt="">
             </div>
         </div>
@@ -141,21 +141,21 @@
         <div class="row my-2">
             <div class="col-12 col-md-3" style="position: relative;">
                 <div>
-                    <img src="https://random.imagecdn.app/300/150" alt="">
-                    <svg style="position: absolute;right: 9%;bottom: 58%;color: orangered;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-collection-play-fill" viewBox="0 0 16 16">
+                    <img id="img1" src="https://random.imagecdn.app/300/150" alt="">
+                    <svg id="fly_svg" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-collection-play-fill" viewBox="0 0 16 16">
                         <path d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm6.258-6.437a.5.5 0 0 1 .507.013l4 2.5a.5.5 0 0 1 0 .848l-4 2.5A.5.5 0 0 1 6 12V7a.5.5 0 0 1 .258-.437z"/>
                       </svg>
                 </div>
-                <ul style="padding-left: 0 !important;margin-top: 10px;">
+                <ul id="clock_icon">
                     <li>
-                        <svg style="color: orangered;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-collection-play-fill" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-collection-play-fill" viewBox="0 0 16 16">
                             <path d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm6.258-6.437a.5.5 0 0 1 .507.013l4 2.5a.5.5 0 0 1 0 .848l-4 2.5A.5.5 0 0 1 6 12V7a.5.5 0 0 1 .258-.437z"/>
                           </svg>
                         <span style="font-weight: bold;"><small class="text-muted">12 minutes ago</small></span>
                         <p style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur.</p>
                     </li>
                     <li>
-                        <svg style="color: orangered;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-collection-play-fill" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-collection-play-fill" viewBox="0 0 16 16">
                             <path d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm6.258-6.437a.5.5 0 0 1 .507.013l4 2.5a.5.5 0 0 1 0 .848l-4 2.5A.5.5 0 0 1 6 12V7a.5.5 0 0 1 .258-.437z"/>
                           </svg>
                         <span style="font-weight: bold;"><small class="text-muted">12 minutes ago</small></span>
@@ -204,8 +204,8 @@
                         <img class="myImage" src="https://random.imagecdn.app/300/400" alt="">
                     </div>
                     <div class="col-12 col-md-4">
-                        <img src="https://random.imagecdn.app/232/200" alt="">
-                        <div class="mt-3" style="display: flex; flex-direction: row; justify-content: space-between;">
+                        <img id="img2" src="https://random.imagecdn.app/232/200" alt="">
+                        <div id="sub_cat" class="mt-3">
                           <div>
                             <img src="https://random.imagecdn.app/100/50" alt="">
                             <p class="card-title">Image Title</p>
@@ -219,8 +219,8 @@
                 </div>
             </div>
             <div class="row">
-              <div class="col-4">
-                <div class="d-flex">
+              <div class="col-12 col-md-4">
+                <div class="d-flex news">
                   <img src="https://random.imagecdn.app/120/100" alt="">
                   <div class="ml-3" style="margin-left: 25px;">
                     <h4>This is Title</h4>
@@ -228,8 +228,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col-4">
-                <div class="d-flex">
+              <div class="col-12 col-md-4">
+                <div class="d-flex news">
                   <img src="https://random.imagecdn.app/120/100" alt="">
                   <div class="ml-3" style="margin-left: 25px;">
                     <h4>This is Title</h4>
@@ -237,8 +237,8 @@
                   </div>  
                 </div>
               </div>
-              <div class="col-4">
-                <div class="d-flex">
+              <div class="col-12 col-md-4">
+                <div class="d-flex news">
                   <img src="https://random.imagecdn.app/120/100" alt="">
                   <div class="ml-3" style="margin-left: 25px;">
                     <h4>This is Title</h4>
@@ -249,7 +249,7 @@
             </div>
         </div>
     </div>
-    <span ><h4 style="float:right;padding-right: 20px; margin-top: 5px; color: #fff;">Play  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
+    <span ><h4 id="play_icon">Play  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
       <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
     </svg></h4></span>
     <div class="container-fluid mx-0" id="divide_sec">
@@ -257,14 +257,14 @@
     </div>
     <div class="container">
       <div class="row mt-3">
-        <div class="col-3">
-          <ul class="d-flex" style="padding-left: 0;">
+        <div class="col-12 col-md-3">
+          <ul id="buttons"  style="padding-left: 0;">
             <li><button class="button" style="background-color: #4CAF50;">Link </button></li>
             <li><button class="button" style="background-color: #282a28;">Link </button></li>
             <li><button class="button" style="background-color: #ea5b13;">Link </button></li>
           </ul>
           <div class="contianer-fluid bg-grey">
-            <div style="margin-bottom: 4px;border-bottom: 1px soild black !important;">
+            <div class="newsData">
               <div class="d-flex">
                 <img src="https://random.imagecdn.app/100/60" alt="">
                 <div class="ml-3" style="margin-left: 25px;">
@@ -273,7 +273,7 @@
                 </div>
               </div>
             </div>
-            <div style="margin-bottom: 4px;border-bottom: 1px soild black !important;">
+            <div class="newsData">
               <div class="d-flex">
                 <img src="https://random.imagecdn.app/100/60" alt="">
                 <div class="ml-3" style="margin-left: 25px;">
@@ -282,7 +282,7 @@
                 </div>
                 </div>
               </div>
-              <div style="margin-bottom: 4px;border-bottom: 1px soild black !important;">
+              <div class="newsData">
                 <div class="d-flex">
                   <img src="https://random.imagecdn.app/100/60" alt="">
                   <div class="ml-3" style="margin-left: 25px;">
@@ -291,11 +291,11 @@
                   </div>
                 </div>
               </div>
-            <button class="button" style="width: 100%;background-color: orangered;" width="100%">Read more</button>
+            <button class="button">Read more</button>
           </div>
         </div>
-        <div class="col-3">
-          <img src="https://random.imagecdn.app/300/350" alt="" style="margin-bottom: 15px;">
+        <div class="col-12 col-md-3">
+          <img id="img3" src="https://random.imagecdn.app/300/350" alt="" style="margin-bottom: 15px;">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-alarm" viewBox="0 0 16 16">
             <path d="M8.5 5.5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5z"/>
             <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07a7.001 7.001 0 0 0-3.273 12.474l-.602.602a.5.5 0 0 0 .707.708l.746-.746A6.97 6.97 0 0 0 8 16a6.97 6.97 0 0 0 3.422-.892l.746.746a.5.5 0 0 0 .707-.708l-.601-.602A7.001 7.001 0 0 0 9 2.07V1h.5a.5.5 0 0 0 0-1h-3zm1.038 3.018a6.093 6.093 0 0 1 .924 0 6 6 0 1 1-.924 0zM0 3.5c0 .753.333 1.429.86 1.887A8.035 8.035 0 0 1 4.387 1.86 2.5 2.5 0 0 0 0 3.5zM13.5 1c-.753 0-1.429.333-1.887.86a8.035 8.035 0 0 1 3.527 3.527A2.5 2.5 0 0 0 13.5 1z"/>
@@ -303,8 +303,8 @@
           <span style="font-weight: bold;"><small class="text-muted">12 minutes ago</small></span>
           <p style="font-weight:bold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem libero, quos et ratione dolore aliquid vero officia dicta adipisci ad.</p>
         </div>
-        <div class="col-3">
-          <div style="margin-bottom: 6px;border-bottom: 1px soild black !important;">
+        <div class="col-12 col-md-3">
+          <div class="newsData2">
             <div class="d-flex">
               <img src="https://random.imagecdn.app/120/80" alt="">
               <div class="ml-3" style="margin-left: 25px;">
@@ -313,7 +313,7 @@
               </div>
             </div>
           </div>
-          <div style="margin-bottom: 6px;border-bottom: 1px soild black !important;">
+          <div class="newsData2">
             <div class="d-flex">
               <img src="https://random.imagecdn.app/120/80" alt="">
               <div class="ml-3" style="margin-left: 25px;">
@@ -322,7 +322,7 @@
               </div>
             </div>
           </div>
-          <div style="margin-bottom: 6px;border-bottom: 1px soild black !important;">
+          <div class="newsData2">
             <div class="d-flex">
               <img src="https://random.imagecdn.app/120/80" alt="">
               <div class="ml-3" style="margin-left: 25px;">
@@ -331,7 +331,7 @@
               </div>
             </div>
           </div>
-          <div style="margin-bottom: 6px;border-bottom: 1px soild black !important;">
+          <div class="newsData2">
             <div class="d-flex">
               <img src="https://random.imagecdn.app/120/80" alt="">
               <div class="ml-3" style="margin-left: 25px;">
@@ -341,7 +341,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-md-3">
           <img src="https://random.imagecdn.app/300/200" alt="">
           <p style="font-weight:bold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem libero, quos et ratione dolore aliquid vero officia dicta adipisci ad.</p>
           <img style="margin-top: 50px;" src="https://random.imagecdn.app/260/140" alt="">
